// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomPage Add a custom page to app with target as array 1`] = `
Object {
  "sap.app": Object {
    "id": "my.test.App",
  },
  "sap.ui5": Object {
    "routing": Object {
      "routes": Array [
        Object {
          "name": "TestObjectPage",
          "pattern": "object/{key}",
          "target": Array [
            "TestObjectPage",
            "ChildEntityCustomPage",
          ],
        },
        Object {
          "name": "ChildEntityCustomPage",
          "pattern": "RootEntity({key})/navToChildEntity({key2}):?query:",
          "target": Array [
            "TestObjectPage",
            "ChildEntityCustomPage",
          ],
        },
      ],
      "targets": Object {
        "ChildEntityCustomPage": Object {
          "id": "my.test.App.ext.customPage",
          "name": "sap.fe.core.fpm",
          "options": Object {
            "settings": Object {
              "entitySet": "ChildEntity",
              "navigation": Object {},
              "viewName": "my.test.App.ext.customPage.CustomPage",
            },
          },
          "type": "Component",
        },
        "TestObjectPage": Object {
          "options": Object {
            "settings": Object {
              "navigation": Object {
                "navToChildEntity": Object {
                  "detail": Object {
                    "route": "ChildEntityCustomPage",
                  },
                },
              },
            },
          },
        },
      },
    },
    "targets": Object {
      "TestObjectPage": Object {},
    },
  },
}
`;

exports[`CustomPage Add a custom page with minimal input 1`] = `
Object {
  "webapp/ext/customPage/CustomPage.controller.js": Object {
    "contents": "sap.ui.define(
    [
        'sap/fe/core/PageController',
        'sap/fe/core/controllerextensions/RoutingListener'
    ],
    function(Controller, RoutingListener) {
        'use strict';

        return Controller.extend('my.test.App.ext.customPage.CustomPage', {
            routingListener: RoutingListener,

            /**
             * Called when a controller is instantiated and its View controls (if available) are already created.
             * Can be used to modify the View before it is displayed, to bind event handlers and do other one-time initialization.
             * @memberOf my.test.App.ext.customPage.CustomPage
             */
            //	onInit: function () {
            //
            //	},

            /**
             * Similar to onAfterRendering, but this hook is invoked before the controller's View is re-rendered
             * (NOT before the first rendering! onInit() is used for that one!).
             * @memberOf my.test.App.ext.customPage.CustomPage
             */
            //	onBeforeRendering: function() {
            //
            //	},

            /**
             * Called when the View has been rendered (so its HTML is part of the document). Post-rendering manipulations of the HTML could be done here.
             * This hook is the same one that SAPUI5 controls get after being rendered.
             * @memberOf my.test.App.ext.customPage.CustomPage
             */
            //	onAfterRendering: function() {
            //
            //	},

            /**
             * Called when the Controller is destroyed. Use this one to free resources and finalize activities.
             * @memberOf my.test.App.ext.customPage.CustomPage
             */
            //	onExit: function() {
            //
            //	}
        });
    }
);
",
    "state": "modified",
  },
  "webapp/ext/customPage/CustomPage.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\"
	xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"my.test.App.ext.customPage.CustomPage\\">
	
	<App>
		<pages>
			<Page title=\\"CustomPage\\">
				<content></content>
			</Page>
		</pages>
	</App>
	
</mvc:View>",
    "state": "modified",
  },
  "webapp/manifest.json": Object {
    "contents": "{
  \\"sap.app\\": {
    \\"id\\": \\"my.test.App\\"
  },
  \\"sap.ui5\\": {
    \\"routing\\": {
      \\"routes\\": [
        {
          \\"name\\": \\"RootEnityCustomPage\\",
          \\"pattern\\": \\"RootEnity({key}):?query:\\",
          \\"target\\": \\"RootEnityCustomPage\\"
        }
      ],
      \\"targets\\": {
        \\"RootEnityCustomPage\\": {
          \\"type\\": \\"Component\\",
          \\"id\\": \\"my.test.App.ext.customPage\\",
          \\"name\\": \\"sap.fe.core.fpm\\",
          \\"options\\": {
            \\"settings\\": {
              \\"viewName\\": \\"my.test.App.ext.customPage.CustomPage\\",
              \\"entitySet\\": \\"RootEnity\\",
              \\"navigation\\": {}
            }
          }
        }
      }
    },
    \\"targets\\": {
      \\"TestObjectPage\\": {}
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`CustomPage Add a custom page with navigation to it 1`] = `
Object {
  "sap.app": Object {
    "id": "my.test.App",
  },
  "sap.ui5": Object {
    "routing": Object {
      "routes": Array [
        Object {
          "name": "ChildEntityCustomPage",
          "pattern": "RootEntity({key})/navToChildEntity({key2}):?query:",
          "target": "ChildEntityCustomPage",
        },
      ],
      "targets": Object {
        "ChildEntityCustomPage": Object {
          "id": "my.test.App.ext.customPage",
          "name": "sap.fe.core.fpm",
          "options": Object {
            "settings": Object {
              "entitySet": "ChildEntity",
              "navigation": Object {},
              "viewName": "my.test.App.ext.customPage.CustomPage",
            },
          },
          "type": "Component",
        },
        "TestObjectPage": Object {
          "options": Object {
            "settings": Object {
              "navigation": Object {
                "navToChildEntity": Object {
                  "detail": Object {
                    "route": "ChildEntityCustomPage",
                  },
                },
              },
            },
          },
        },
      },
    },
    "targets": Object {
      "TestObjectPage": Object {},
    },
  },
}
`;
